--- a/index.html
+++ b/index.html
@@ -214,6 +214,71 @@
 </section>
 <!-- Find End -->
 
+<!-- Modern & Beautiful -->
+<section class="modern_beautiful">
+  <div class="modern_heading">
+    <h6>Modern & Beautiful</h6>
+    <h2>Explore the World for Yourself</h2>
+  </div><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Modern & Beautiful End -->
+
   <!-- Offer -->
 
   <section class="offer">
