--- a/about.html
+++ b/about.html
@@ -25,10 +25,11 @@
   <!-- Login -->
 <section class="login_sec">
   <div class="lgoin_system">
-    <span>
+    
+    <!-- <span>
       <i class="fas fa-user-circle"></i> 
       LOGIN
-    </span>
+    </span> -->
   </div>
   <div class="login_user"></div>
     <div class="login_users">
