--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;600&display=swap" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,16 +21,19 @@
   <link rel="stylesheet" href="css/about.css">
   <title>Roam</title>
 </head>
-<body>
+<body dir="rtl">
 <!-- Login -->
 <section class="login_sec">
 <div class="lgoin_system">
-  <span>
-    <i class="fas fa-user-circle"></i> 
-    LOGIN
-  </span>
+  <button><i class="fas fa-redo-alt"></i></button>
+  <button><i class="fas fa-minus"></i></button>
+  <button><i class="fas fa-plus"></i></button>
+  <button><i class="fas fa-sun"></i></button>
+  <button><i class="fas fa-moon"></i></button>
+  <label><input type="text" id="search-bar" placeholder="ابحث الان"><span class="search_icon"><i class="fas fa-search"></i></span></label>
+  <a href="#">Engilsh</a>
 </div>
-<div class="login_user"></div>
+<!-- <div class="login_user"></div>
   <div class="login_users">
     <span id="span_login">Login</span><span id="span_register">Register</span><br>
     <br><br>
@@ -46,7 +50,7 @@
       <input type="password" placeholder="RePassword..." >
       <button id="btn_register">RIGISTER</button>
     </div>
-  </div>
+  </div> -->
 </section>
 <!-- Login End -->
   <!-- Header -->
@@ -65,13 +69,36 @@
                   Home
                 </a>
                 <div class="dropdown_hover">
-                  <span> <a href="index.html">Main Home</a> </span>
-                  <span> <a href="mountaineering.html">Mountaineering Home</a> </span>
-                  <span> <a href="about.html">About Us</a> </span>
-                  <span> <a href="ourteam.html">Our Team</a> </span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li class="nav-item  mr_1 droped">
@@ -79,13 +106,16 @@
                   Home
                 </a>
                 <div class="dropdown_hover">
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li class="nav-item  mr_1 droped">
@@ -93,13 +123,16 @@
                   Home
                 </a>
                 <div class="dropdown_hover">
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li class="nav-item  mr_1 droped">
@@ -107,13 +140,16 @@
                   Home
                 </a>
                 <div class="dropdown_hover">
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li class="nav-item  mr_1 droped">
@@ -121,13 +157,16 @@
                   Home
                 </a>
                 <div class="dropdown_hover">
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                      <li>كلية الهندسة وعلوم الحاسب</li>
+                      <li>كلية الهندسة بوادي البواسر</li>
+                      <li>كلية ادارة الاعمال-حوطة بني تميم</li>
+                    </ul>
+                  </div>
                 </div>
               </li>
               <li class="nav-item  mr_1 droped">
@@ -135,19 +174,14 @@
                   Home
                 </a>
                 <div class="dropdown_hover">
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
-                  <span>Main Home</span>
+                  <div>
+                    <span class="active_react"> الكلمات العلمية </span>
+                    <ul>
+                      <li>كلية ادارة الاعمال</li>
+                      <li>كلية الهندسة</li>
+                    </ul>
+                  </div>
                 </div>
-              </li>              <li class="nav-item ml_1">
-                <a href="#">
-                  <i class="fas fa-search"></i>
-                </a>
-              </li>
             </ul>
           </div>
         </div>
