--- a/index.html
+++ b/index.html
@@ -251,65 +251,189 @@
 <!-- Modern & Beautiful -->
 <section class="modern_beautiful">
   <div class="modern_heading">
-    <h6>Modern & Beautiful</h6>
-    <h2>Explore the World for Yourself</h2>
+    <h2>خدمات الوزارة</h2>
   </div><br>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
+ <div class="container">
+  <div class="row">
+    <div class="col-4">
+      <div class="list-group" id="list-tab" role="tablist">
+        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="home">الخدمات الاكثر شيوعا</a>
+        <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="profile">الخدمات الالكترونية</a>
+        <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="messages">اداة الخدمات </a>
+        <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="settings">الاستبيانات </a>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-12 modern_bg">
-        <span>$500</span>
-        <h4>Discover Rosta Rise</h4>
-        <h3>Costrika Pikama</h3>
+    <div class="col-8">
+      <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
+          <div class="container">
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
+          <div class="container">
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
+          <div class="container">
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
+          <div class="container">
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+              <div class=" services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+            <div class="row d-flex">
+              <div class="services_info">
+                <img src="http://www.mol.gov.jo/ebv4.0/root_storage/ar/eb_homepage/children_2-0.png" alt="">
+                <h6>نظام عمل الاطفال</h6>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+ </div>
+  <!-- <div class="container">
+    <div class="row">
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-2 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+      <div class="col-lg-3 col-md-6 col-sm-12 modern_bg">
+        <span>$500</span>
+        <h4>Discover Rosta Rise</h4>
+        <h3>Costrika Pikama</h3>
+      </div>
+    </div>
+  </div> -->
 </section>
 <!-- Modern & Beautiful End -->
 
